[package]
name = "webhook"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for local webhook testing with a TUI interface"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
http-body-util = "0.1"
bytes = "1"
